# Test_task_MEDGARANT

./: .env-example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/database/: database.py
app/database/migrations/: env.py
app/database/migrations/versions/: 4935ce6f3c8f_initial.py
app/services/doctors/: db_handlers.py  models.py  routes.py  schemas.py  utils.py  views.py
